--- a/render/public/css/producto.css
+++ b/render/public/css/producto.css
@@ -13,9 +13,8 @@ a.addProductBoton>i {
 }
 
 div#agregarProductoModal,
-div#modalActualizarProductos
-{
-z-index: 10001 !important;
+div#modalActualizarProductos {
+    z-index: 10001 !important;
 }
 
 div.categoriesDetail>.form-group {
@@ -26,35 +25,35 @@ div.categoriesDetail>.form-group {
     cursor: pointer;
 }
 
-div.categoriesDetail>.form-group::-webkit-scrollbar ,
+div.categoriesDetail>.form-group::-webkit-scrollbar,
 div.fieldInput::-webkit-scrollbar {
     -webkit-appearance: none;
 }
 
 div.categoriesDetail>.form-group::-webkit-scrollbar:vertical,
-div.fieldInput::-webkit-scrollbar:vertical  {
+div.fieldInput::-webkit-scrollbar:vertical {
     width: 6px;
 }
 
 div.categoriesDetail>.form-group::-webkit-scrollbar-button:increment,
 .contenedor::-webkit-scrollbar-button,
-div.fieldInput::-webkit-scrollbar-button:increment  {
+div.fieldInput::-webkit-scrollbar-button:increment {
     display: none;
 }
 
 div.categoriesDetail>.form-groupcontenedor::-webkit-scrollbar:horizontal,
-div.fieldInput::-webkit-scrollbar:horizontal  {
+div.fieldInput::-webkit-scrollbar:horizontal {
     height: 10px;
 }
 
 div.categoriesDetail>.form-group::-webkit-scrollbar-thumb,
-div.fieldInput::-webkit-scrollbar-thumb  {
+div.fieldInput::-webkit-scrollbar-thumb {
     background-color: #5e72e4;
     border-radius: 20px;
     border: 1px solid #5e72e4;
 }
 
-div.categoriesDetail>.form-group::-webkit-scrollbar-track ,
+div.categoriesDetail>.form-group::-webkit-scrollbar-track,
 div.fieldInput::-webkit-scrollbar-track {
     border-radius: 6px;
 }
@@ -63,3 +62,47 @@ div.fieldInput {
     max-height: 100px;
     overflow: auto;
 }
+
+/* estilos del datatable */
+
+div.dataTables_paginate>span>a {
+    border-radius: 100% !important;
+    borer: 1px solid black !important;
+    padding: 0 !important;
+    width: 30px !important;
+    text-align: center;
+    line-height: 30px;
+    height: 30px !important;
+    font-size: 14px !important;
+
+}
+
+div.dataTables_length>label,
+div.dataTables_length>label>select {
+    color: #8392ab !important
+}
+
+div#productos_filter {
+    display: none !important;
+}
+
+div#productos_wrapper {
+    overflow: hidden !important;
+}
+
+div.dataTables_paginate>a {
+    padding: 0 !important;
+    border-radius: 100% !important;
+    text-align: center !important;
+}
+
+div.dataTables_paginate>span>a:hover {
+    background-color: var(--bs-primary) !important;
+}
+
+div.dataTables_info {
+    color: #8392ab !important;
+    font-size: 14px !important;
+}
+
+/* fin estilos del datatable */
